tried to fix the issue where chrome does not have a vertical scrollbar when answers overflowed. But there is a vertical scrollie when on Internet explorer

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  overflow-y: auto;
  
 }
 
+
+.scrollable-content {
+  max-height: 100%;
+  overflow-y: auto;
+}
